--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
-{deps, [{grpc_lib, {git, "https://github.com/wallacegibbon/grpc_lib"}},
-        {cowboy, {git, "https://github.com/ninenines/cowboy", {branch, "master"}}}
-       ]}.
+{deps,
+    [{grpc_lib, {git, "https://github.com/wallacegibbon/grpc_lib", {branch, "master"}}},
+     {cowboy, {git, "https://github.com/ninenines/cowboy", {branch, "master"}}}
+    ]}.
