--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,18 @@
+{plugins, [rebar3_format]}
+
+.
+
+{format,
+ [{files, ["src/*", "test/*.erl", "rebar.config"]},
+  {formatter, otp_formatter}]}
+
+.
+
 {deps,
-    [{grpc_lib, {git, "https://github.com/wallacegibbon/grpc_lib", {branch, "master"}}},
-     {cowboy, {git, "https://github.com/ninenines/cowboy", {branch, "master"}}}
-    ]}.
+ [{grpc_lib,
+   {git,
+    "https://github.com/wallacegibbon/grpc_lib",
+    {branch, "master"}}},
+  cowboy]}
+
+.
