--- a/rebar.config
+++ b/rebar.config
@@ -1,18 +1,5 @@
-{plugins, [rebar3_format]}
-
-.
-
-{format,
- [{files, ["src/*", "test/*.erl", "rebar.config"]},
-  {formatter, otp_formatter}]}
-
-.
-
 {deps,
  [{grpc_lib,
-   {git,
-    "https://github.com/wallacegibbon/grpc_lib",
-    {branch, "master"}}},
-  cowboy]}
+   {git, "https://github.com/wallacegibbon/grpc_lib", {branch, "master"}}},
+  cowboy]}.
 
-.
